grammar/CACTParser.cpp

    #include <vector>


// Generated from CACT.g4 by ANTLR 4.13.1


#include "CACTVisitor.h"

#include "CACTParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct CACTParserStaticData final {
  CACTParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  CACTParserStaticData(const CACTParserStaticData&) = delete;
  CACTParserStaticData(CACTParserStaticData&&) = delete;
  CACTParserStaticData& operator=(const CACTParserStaticData&) = delete;
  CACTParserStaticData& operator=(CACTParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag cactParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
CACTParserStaticData *cactParserStaticData = nullptr;

void cactParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (cactParserStaticData != nullptr) {
    return;
  }
#else
  assert(cactParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<CACTParserStaticData>(
    std::vector<std::string>{
      "wholeProgram", "compilationUnit", "declaration", "basicType", "constantDeclaration", 
      "constantDefinition", "constantInitialValue", "variableDeclaration", 
      "variableDefinition", "arrayDimensions", "functionDefinition", "functionReturnType", 
      "functionFormalParams", "functionFormalParam", "arrayDimensionsOptional", 
      "codeBlock", "blockItem", "statement", "expression", "constantExpression", 
      "condition", "leftValue", "arrayIndices", "numberValue", "functionActualParams", 
      "primaryExpression", "unaryExpression", "unaryOperator", "multiplicationExpression", 
      "multiplicationOperator", "additionExpression", "relationalExpression", 
      "relationalOperator", "equalityExpression", "equalityOperator", "logicalAndExpression", 
      "logicalOrExpression", "integerConstant"
    },
    std::vector<std::string>{
      "", "'const'", "'int'", "'char'", "'double'", "'float'", "'void'", 
      "'if'", "'else'", "'while'", "'break'", "'continue'", "'return'", 
      "", "", "", "", "", "", "", "'+'", "'-'", "'!'", "'*'", "'/'", "'%'", 
      "'='", "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", "'&&'", "'||'", 
      "'('", "')'", "'{'", "'}'", "'['", "']'", "','", "';'"
    },
    std::vector<std::string>{
      "", "CONSTANT_KEYWORD", "INTEGER_KEYWORD", "CHAR_KEYWORD", "DOUBLE_KEYWORD", 
      "FLOAT_KEYWORD", "VOID_KEYWORD", "IF_KEYWORD", "ELSE_KEYWORD", "WHILE_KEYWORD", 
      "BREAK_KEYWORD", "CONTINUE_KEYWORD", "RETURN_KEYWORD", "IDENTIFIER", 
      "DECIMAL_NUMBER", "OCTAL_NUMBER", "HEXADECIMAL_NUMBER", "EXPONENT_NUMBER", 
      "FLOATING_POINT_CONSTANT", "CHARACTER_CONSTANT", "PLUS_OPERATOR", 
      "MINUS_OPERATOR", "NOT_OPERATOR", "MULTIPLICATION_OPERATOR", "DIVISION_OPERATOR", 
      "MODULUS_OPERATOR", "ASSIGNMENT", "EQUALITY_OPERATOR", "INEQUALITY_OPERATOR", 
      "GREATER_THAN_OPERATOR", "LESS_THAN_OPERATOR", "GREATER_OR_EQUAL_OPERATOR", 
      "LESS_OR_EQUAL_OPERATOR", "LOGICAL_AND_OPERATOR", "LOGICAL_OR_OPERATOR", 
      "LEFT_PAREN", "RIGHT_PAREN", "LEFT_BRACE", "RIGHT_BRACE", "LEFT_BRACKET", 
      "RIGHT_BRACKET", "COMMA", "SEMICOLON", "WHITESPACE", "SINGLE_LINE_COMMENT", 
      "MULTI_LINE_COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  cactParserStaticData = staticData.release();
}

}

CACTParser::CACTParser(TokenStream *input) : CACTParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

CACTParser::CACTParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  CACTParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *cactParserStaticData->atn, cactParserStaticData->decisionToDFA, cactParserStaticData->sharedContextCache, options);
}

CACTParser::~CACTParser() {
  delete _interpreter;
}

const atn::ATN& CACTParser::getATN() const {
  return *cactParserStaticData->atn;
}

std::string CACTParser::getGrammarFileName() const {
  return "CACT.g4";
}

const std::vector<std::string>& CACTParser::getRuleNames() const {
  return cactParserStaticData->ruleNames;
}

const dfa::Vocabulary& CACTParser::getVocabulary() const {
  return cactParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView CACTParser::getSerializedATN() const {
  return cactParserStaticData->serializedATN;
}


//----------------- WholeProgramContext ------------------------------------------------------------------

CACTParser::WholeProgramContext::WholeProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CACTParser::CompilationUnitContext* CACTParser::WholeProgramContext::compilationUnit() {
  return getRuleContext<CACTParser::CompilationUnitContext>(0);
}


size_t CACTParser::WholeProgramContext::getRuleIndex() const {
  return CACTParser::RuleWholeProgram;
}


std::any CACTParser::WholeProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CACTVisitor*>(visitor))
    return parserVisitor->visitWholeProgram(this);
  else
    return visitor->visitChildren(this);
}

CACTParser::WholeProgramContext* CACTParser::wholeProgram() {
  WholeProgramContext *_localctx = _tracker.createInstance<WholeProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, CACTParser::RuleWholeProgram);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(76);
    compilationUnit();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CompilationUnitContext ------------------------------------------------------------------

CACTParser::CompilationUnitContext::CompilationUnitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CACTParser::CompilationUnitContext::EOF() {
  return getToken(CACTParser::EOF, 0);
}

std::vector<CACTParser::DeclarationContext *> CACTParser::CompilationUnitContext::declaration() {
  return getRuleContexts<CACTParser::DeclarationContext>();
}

CACTParser::DeclarationContext* CACTParser::CompilationUnitContext::declaration(size_t i) {
  return getRuleContext<CACTParser::DeclarationContext>(i);
}

std::vector<CACTParser::FunctionDefinitionContext *> CACTParser::CompilationUnitContext::functionDefinition() {
  return getRuleContexts<CACTParser::FunctionDefinitionContext>();
}

CACTParser::FunctionDefinitionContext* CACTParser::CompilationUnitContext::functionDefinition(size_t i) {
  return getRuleContext<CACTParser::FunctionDefinitionContext>(i);
}


size_t CACTParser::CompilationUnitContext::getRuleIndex() const {
  return CACTParser::RuleCompilationUnit;
}


std::any CACTParser::CompilationUnitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CACTVisitor*>(visitor))
    return parserVisitor->visitCompilationUnit(this);
  else
    return visitor->visitChildren(this);
}

CACTParser::CompilationUnitContext* CACTParser::compilationUnit() {
  CompilationUnitContext *_localctx = _tracker.createInstance<CompilationUnitContext>(_ctx, getState());
  enterRule(_localctx, 2, CACTParser::RuleCompilationUnit);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(80); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(80);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
      case 1: {
        setState(78);
        declaration();
        break;
      }

      case 2: {
        setState(79);
        functionDefinition();
        break;
      }

      default:
        break;
      }
      setState(82); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 126) != 0));
    setState(84);
    match(CACTParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationContext ------------------------------------------------------------------

CACTParser::DeclarationContext::DeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CACTParser::ConstantDeclarationContext* CACTParser::DeclarationContext::constantDeclaration() {
  return getRuleContext<CACTParser::ConstantDeclarationContext>(0);
}

CACTParser::VariableDeclarationContext* CACTParser::DeclarationContext::variableDeclaration() {
  return getRuleContext<CACTParser::VariableDeclarationContext>(0);
}


size_t CACTParser::DeclarationContext::getRuleIndex() const {
  return CACTParser::RuleDeclaration;
}


std::any CACTParser::DeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CACTVisitor*>(visitor))
    return parserVisitor->visitDeclaration(this);
  else
    return visitor->visitChildren(this);
}

CACTParser::DeclarationContext* CACTParser::declaration() {
  DeclarationContext *_localctx = _tracker.createInstance<DeclarationContext>(_ctx, getState());
  enterRule(_localctx, 4, CACTParser::RuleDeclaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(88);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CACTParser::CONSTANT_KEYWORD: {
        enterOuterAlt(_localctx, 1);
        setState(86);
        constantDeclaration();
        break;
      }

      case CACTParser::INTEGER_KEYWORD:
      case CACTParser::CHAR_KEYWORD:
      case CACTParser::DOUBLE_KEYWORD:
      case CACTParser::FLOAT_KEYWORD: {
        enterOuterAlt(_localctx, 2);
        setState(87);
        variableDeclaration();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BasicTypeContext ------------------------------------------------------------------

CACTParser::BasicTypeContext::BasicTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CACTParser::BasicTypeContext::INTEGER_KEYWORD() {
  return getToken(CACTParser::INTEGER_KEYWORD, 0);
}

tree::TerminalNode* CACTParser::BasicTypeContext::CHAR_KEYWORD() {
  return getToken(CACTParser::CHAR_KEYWORD, 0);
}

tree::TerminalNode* CACTParser::BasicTypeContext::DOUBLE_KEYWORD() {
  return getToken(CACTParser::DOUBLE_KEYWORD, 0);
}

tree::TerminalNode* CACTParser::BasicTypeContext::FLOAT_KEYWORD() {
  return getToken(CACTParser::FLOAT_KEYWORD, 0);
}


size_t CACTParser::BasicTypeContext::getRuleIndex() const {
  return CACTParser::RuleBasicType;
}


std::any CACTParser::BasicTypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CACTVisitor*>(visitor))
    return parserVisitor->visitBasicType(this);
  else
    return visitor->visitChildren(this);
}

CACTParser::BasicTypeContext* CACTParser::basicType() {
  BasicTypeContext *_localctx = _tracker.createInstance<BasicTypeContext>(_ctx, getState());
  enterRule(_localctx, 6, CACTParser::RuleBasicType);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(90);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 60) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstantDeclarationContext ------------------------------------------------------------------

CACTParser::ConstantDeclarationContext::ConstantDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CACTParser::ConstantDeclarationContext::CONSTANT_KEYWORD() {
  return getToken(CACTParser::CONSTANT_KEYWORD, 0);
}

CACTParser::BasicTypeContext* CACTParser::ConstantDeclarationContext::basicType() {
  return getRuleContext<CACTParser::BasicTypeContext>(0);
}

std::vector<CACTParser::ConstantDefinitionContext *> CACTParser::ConstantDeclarationContext::constantDefinition() {
  return getRuleContexts<CACTParser::ConstantDefinitionContext>();
}

CACTParser::ConstantDefinitionContext* CACTParser::ConstantDeclarationContext::constantDefinition(size_t i) {
  return getRuleContext<CACTParser::ConstantDefinitionContext>(i);
}

tree::TerminalNode* CACTParser::ConstantDeclarationContext::SEMICOLON() {
  return getToken(CACTParser::SEMICOLON, 0);
}

std::vector<tree::TerminalNode *> CACTParser::ConstantDeclarationContext::COMMA() {
  return getTokens(CACTParser::COMMA);
}

tree::TerminalNode* CACTParser::ConstantDeclarationContext::COMMA(size_t i) {
  return getToken(CACTParser::COMMA, i);
}


size_t CACTParser::ConstantDeclarationContext::getRuleIndex() const {
  return CACTParser::RuleConstantDeclaration;
}


std::any CACTParser::ConstantDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CACTVisitor*>(visitor))
    return parserVisitor->visitConstantDeclaration(this);
  else
    return visitor->visitChildren(this);
}

CACTParser::ConstantDeclarationContext* CACTParser::constantDeclaration() {
  ConstantDeclarationContext *_localctx = _tracker.createInstance<ConstantDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 8, CACTParser::RuleConstantDeclaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(92);
    match(CACTParser::CONSTANT_KEYWORD);
    setState(93);
    basicType();
    setState(94);
    constantDefinition();
    setState(99);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CACTParser::COMMA) {
      setState(95);
      match(CACTParser::COMMA);
      setState(96);
      constantDefinition();
      setState(101);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(102);
    match(CACTParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstantDefinitionContext ------------------------------------------------------------------

CACTParser::ConstantDefinitionContext::ConstantDefinitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CACTParser::ConstantDefinitionContext::IDENTIFIER() {
  return getToken(CACTParser::IDENTIFIER, 0);
}

tree::TerminalNode* CACTParser::ConstantDefinitionContext::ASSIGNMENT() {
  return getToken(CACTParser::ASSIGNMENT, 0);
}

CACTParser::ConstantInitialValueContext* CACTParser::ConstantDefinitionContext::constantInitialValue() {
  return getRuleContext<CACTParser::ConstantInitialValueContext>(0);
}

CACTParser::ArrayDimensionsContext* CACTParser::ConstantDefinitionContext::arrayDimensions() {
  return getRuleContext<CACTParser::ArrayDimensionsContext>(0);
}


size_t CACTParser::ConstantDefinitionContext::getRuleIndex() const {
  return CACTParser::RuleConstantDefinition;
}


std::any CACTParser::ConstantDefinitionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CACTVisitor*>(visitor))
    return parserVisitor->visitConstantDefinition(this);
  else
    return visitor->visitChildren(this);
}

CACTParser::ConstantDefinitionContext* CACTParser::constantDefinition() {
  ConstantDefinitionContext *_localctx = _tracker.createInstance<ConstantDefinitionContext>(_ctx, getState());
  enterRule(_localctx, 10, CACTParser::RuleConstantDefinition);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(104);
    match(CACTParser::IDENTIFIER);
    setState(106);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == CACTParser::LEFT_BRACKET) {
      setState(105);
      arrayDimensions();
    }
    setState(108);
    match(CACTParser::ASSIGNMENT);
    setState(109);
    constantInitialValue();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstantInitialValueContext ------------------------------------------------------------------

CACTParser::ConstantInitialValueContext::ConstantInitialValueContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CACTParser::ConstantExpressionContext* CACTParser::ConstantInitialValueContext::constantExpression() {
  return getRuleContext<CACTParser::ConstantExpressionContext>(0);
}

tree::TerminalNode* CACTParser::ConstantInitialValueContext::LEFT_BRACE() {
  return getToken(CACTParser::LEFT_BRACE, 0);
}

tree::TerminalNode* CACTParser::ConstantInitialValueContext::RIGHT_BRACE() {
  return getToken(CACTParser::RIGHT_BRACE, 0);
}

std::vector<CACTParser::ConstantInitialValueContext *> CACTParser::ConstantInitialValueContext::constantInitialValue() {
  return getRuleContexts<CACTParser::ConstantInitialValueContext>();
}

CACTParser::ConstantInitialValueContext* CACTParser::ConstantInitialValueContext::constantInitialValue(size_t i) {
  return getRuleContext<CACTParser::ConstantInitialValueContext>(i);
}

std::vector<tree::TerminalNode *> CACTParser::ConstantInitialValueContext::COMMA() {
  return getTokens(CACTParser::COMMA);
}

tree::TerminalNode* CACTParser::ConstantInitialValueContext::COMMA(size_t i) {
  return getToken(CACTParser::COMMA, i);
}


size_t CACTParser::ConstantInitialValueContext::getRuleIndex() const {
  return CACTParser::RuleConstantInitialValue;
}


std::any CACTParser::ConstantInitialValueContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CACTVisitor*>(visitor))
    return parserVisitor->visitConstantInitialValue(this);
  else
    return visitor->visitChildren(this);
}

CACTParser::ConstantInitialValueContext* CACTParser::constantInitialValue() {
  ConstantInitialValueContext *_localctx = _tracker.createInstance<ConstantInitialValueContext>(_ctx, getState());
  enterRule(_localctx, 12, CACTParser::RuleConstantInitialValue);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(124);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CACTParser::DECIMAL_NUMBER:
      case CACTParser::OCTAL_NUMBER:
      case CACTParser::HEXADECIMAL_NUMBER:
      case CACTParser::EXPONENT_NUMBER:
      case CACTParser::FLOATING_POINT_CONSTANT:
      case CACTParser::CHARACTER_CONSTANT: {
        enterOuterAlt(_localctx, 1);
        setState(111);
        constantExpression();
        break;
      }

      case CACTParser::LEFT_BRACE: {
        enterOuterAlt(_localctx, 2);
        setState(112);
        match(CACTParser::LEFT_BRACE);
        setState(121);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & 137439985664) != 0)) {
          setState(113);
          constantInitialValue();
          setState(118);
          _errHandler->sync(this);
          _la = _input->LA(1);
          while (_la == CACTParser::COMMA) {
            setState(114);
            match(CACTParser::COMMA);
            setState(115);
            constantInitialValue();
            setState(120);
            _errHandler->sync(this);
            _la = _input->LA(1);
          }
        }
        setState(123);
        match(CACTParser::RIGHT_BRACE);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableDeclarationContext ------------------------------------------------------------------

CACTParser::VariableDeclarationContext::VariableDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CACTParser::BasicTypeContext* CACTParser::VariableDeclarationContext::basicType() {
  return getRuleContext<CACTParser::BasicTypeContext>(0);
}

std::vector<CACTParser::VariableDefinitionContext *> CACTParser::VariableDeclarationContext::variableDefinition() {
  return getRuleContexts<CACTParser::VariableDefinitionContext>();
}

CACTParser::VariableDefinitionContext* CACTParser::VariableDeclarationContext::variableDefinition(size_t i) {
  return getRuleContext<CACTParser::VariableDefinitionContext>(i);
}

tree::TerminalNode* CACTParser::VariableDeclarationContext::SEMICOLON() {
  return getToken(CACTParser::SEMICOLON, 0);
}

std::vector<tree::TerminalNode *> CACTParser::VariableDeclarationContext::COMMA() {
  return getTokens(CACTParser::COMMA);
}

tree::TerminalNode* CACTParser::VariableDeclarationContext::COMMA(size_t i) {
  return getToken(CACTParser::COMMA, i);
}


size_t CACTParser::VariableDeclarationContext::getRuleIndex() const {
  return CACTParser::RuleVariableDeclaration;
}


std::any CACTParser::VariableDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CACTVisitor*>(visitor))
    return parserVisitor->visitVariableDeclaration(this);
  else
    return visitor->visitChildren(this);
}

CACTParser::VariableDeclarationContext* CACTParser::variableDeclaration() {
  VariableDeclarationContext *_localctx = _tracker.createInstance<VariableDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 14, CACTParser::RuleVariableDeclaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(126);
    basicType();
    setState(127);
    variableDefinition();
    setState(132);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CACTParser::COMMA) {
      setState(128);
      match(CACTParser::COMMA);
      setState(129);
      variableDefinition();
      setState(134);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(135);
    match(CACTParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableDefinitionContext ------------------------------------------------------------------

CACTParser::VariableDefinitionContext::VariableDefinitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CACTParser::VariableDefinitionContext::IDENTIFIER() {
  return getToken(CACTParser::IDENTIFIER, 0);
}
